update slide text and bottom-navbar

--- a/templates/userWeb/base.html
+++ b/templates/userWeb/base.html
@@ -31,41 +31,37 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-3">
-                        <h5>Pricing</h5>
+                        <h5>云雀加速器</h5>
                         <ul>
-                            <li><a href="/pricing/">Vultr Cloud Compute (VC2)</a></li>
-                            <li><a href="/pricing/blockstorage/">Block Storage</a></li>
-                            <li><a href="/pricing/dedicatedcloud/">Dedicated Instances</a></li>
+                            <li><a href="/pricing/">购买服务</a></li>
+                            <li><a href="/pricing/">支付方式</a></li>
+                            <li><a href="/pricing/blockstorage/">关于我们</a></li>
+                            <li><a href="/pricing/dedicatedcloud/">服务条款</a></li>
                         </ul>
                     </div>
                     <div class="col-xs-3">
-                        <h5>Features</h5>
+                        <h5>资源</h5>
                         <ul>
-                            <li><a href="/features/">Vultr Cloud Compute (VC2)</a></li>
-                            <li><a href="/features/blockstorage/">Block Storage</a></li>
-                            <li><a href="/features/dedicatedcloud/">Dedicated Cloud</a></li>
-                            <li><a href="/locations/">Datacenter Locations</a></li>
-                            <li><a href="/features/controlpanel/">Control Panel</a></li>
+                            <li><a href="/features/">服务器线路</a></li>
+                            <li><a href="/features/blockstorage/">最新消息</a></li>
+                            <li><a href="/features/dedicatedcloud/">速度&路由追踪</a></li>
                         </ul>
                     </div>
                     <div class="col-xs-3">
-                        <h5>Resources</h5>
+                        <h5>支持</h5>
                         <ul>
-                            <li><a href="/faq/">FAQ</a></li>
-                            <li><a href="/api/">API</a></li>
-                            <li><a href="/docs/">Vultr Docs</a></li>
-                            <li><a href="/benchmarks/">Benchmarks</a></li>
-                            <li><a href="/status/">Server Status</a></li>
+                            <li><a href="/faq/">帮助</a></li>
+                            <li><a href="/api/">联系客服</a></li>
+                            <li><a href="/docs/">QQ</a></li>
+                            <li><a href="/benchmarks/">Email</a></li>
                         </ul>
                     </div>
                     <div class="col-xs-3">
-                        <h5>Company</h5>
+                        <h5>合作</h5>
                         <ul>
-                            <li><a href="/about/">About Us</a></li>
-                            <li><a href="/news/">News</a></li>
-                            <li><a href="/affiliate/">Logos &amp; Banners</a></li>
-                            <li><a href="/corporate/careers/">Careers</a></li>
-                            <li><a href="/sla/">SLA</a></li>
+                            <li><a href="/about/">推广计划</a></li>
+                            <li><a href="/news/">合作方式</a></li>
+                            <li><a href="/affiliate/">友商列表</a></li>
                         </ul>
                     </div>
                 </div>
@@ -73,7 +69,7 @@
         </footer>
 
         <footer class="footer-bottom">
-                <h5>Copyright 2016 &copy Logo LLC. All rights reserved.</h5>
+                <h5>Copyright 2016 &copy 云雀加速器 LLC. All rights reserved.</h5>
         </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
