--- a/templates/userWeb/index.html
+++ b/templates/userWeb/index.html
@@ -44,24 +44,18 @@
 
           <div class="carousel-inner">
             <div class="item active">
-              <a href="#"><img src="http://image.tianjimedia.com/uploadImages/2012/013/3SV2G5B11S78.jpg" /></a>
+              <a href="#"><img src="/media/images/slide2.jpg" /></a>
               <div class="carousel-caption">
-                <h3>Logo</h3>
-                <p>您最佳的选择</p>
               </div>
             </div>
             <div class="item">
-              <a href="#"><img src="http://pic.90sjimg.com/back_pic/qk/back_origin_pic/00/03/02/d6c43695c7542cb412dc5e4c487edfc7.jpg" /></a>
+              <a href="#"><img src="/media/images/slide3.jpg" /></a>
               <div class="carousel-caption">
-                <h3>Meow</h3>
-                <p>Just Kitten Around</p>
               </div>
             </div>
             <div class="item">
-              <a href="#"><img src="http://pic.90sjimg.com/back_pic/00/04/20/33/18fb6214433867103e3990a1022cdc9a.jpg" /></a>
+              <a href="#"><img src="/media/images/slide4.jpg" /></a>
               <div class="carousel-caption">
-                <h3>Meow</h3>
-                <p>Just Kitten Around</p>
               </div>
             </div>
           </div>
@@ -174,59 +168,59 @@
         <div class="third-page">
                 <div class="thead">
                     <h2 class="section-title">简单 强大 可靠</h2>
-                    <p class="section-desc">我们选用最优质的服务器和最优化的线路为您的冲浪保驾护航</p>
+                    <h4 class="section-desc">我们选用最优质的服务器和最优化的线路为您的冲浪保驾护航</h4>
                 </div>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-3 col-xs-6">
-                            <div class="feature"><i class="fa fa-sitemap fa-4x" aria-hidden="true"></i>
-                                <h5>Activate in minutes, online 24x7</h5>
+                            <div class="feature"><i class="fa fa-clock-o fa-4x" aria-hidden="true"></i>
+                                <h5>7x24小时不间断服务</h5>
                             </div>
                         </div>
                         <!-- /.feature -->
                         <div class="col-sm-3 col-xs-6">
                             <div class="feature"><i class="fa fa-globe fa-4x" aria-hidden="true"></i>
-                                <h5>15 low latency locations</h5>
+                                <h5>世界范围内服务器随您挑选</h5>
                             </div>
                         </div>
                         <!-- /.feature -->
                         <div class="clear-xs"></div>
                         <div class="col-sm-3 col-xs-6">
-                            <div class="feature"><i class="fa fa-deaf fa-4x" aria-hidden="true"></i>
-                                <h5>100% SLA guaranteed</h5>
+                            <div class="feature"><i class="fa fa-handshake-o fa-4x" aria-hidden="true"></i>
+                                <h5>多种协议支持适应不同环境</h5>
                             </div>
                         </div>
                         <!-- /.feature -->
                         <div class="col-sm-3 col-xs-6">
-                            <div class="feature"><i class="fa fa-anchor fa-4x" aria-hidden="true"></i>
-                                <h5>Solid-state drives</h5>
+                            <div class="feature"><i class="fa fa-signal fa-4x" aria-hidden="true"></i>
+                                <h5>优化的线路降低您的延迟</h5>
                             </div>
                         </div>
                         <!-- /.feature -->
                     </div>
                     <div class="row">
                         <div class="col-sm-3 col-xs-6">
-                            <div class="feature"><i class="fa fa-thermometer-empty fa-4x" aria-hidden="true"></i>
-                                <h5>Powerful infrastructure</h5>
+                            <div class="feature"><i class="fa fa-tablet fa-4x" aria-hidden="true"></i>
+                                <h5>界面移动设备优化</h5>
                             </div>
                         </div>
                         <!-- /.feature -->
                         <div class="col-sm-3 col-xs-6">
-                            <div class="feature"><i class="fa fa-microchip fa-4x" aria-hidden="true"></i>
-                                <h5>Feature-rich control panel</h5>
+                            <div class="feature"><i class="fa fa-credit-card fa-4x" aria-hidden="true"></i>
+                                <h5>支付完毕立即开通</h5>
                             </div>
                         </div>
                         <!-- /.feature -->
                         <div class="clear-xs"></div>
                         <div class="col-sm-3 col-xs-6">
-                            <div class="feature"><i class="fa fa-camera-retro fa-4x" aria-hidden="true"></i> 
-                                <h5>Root administrator access</h5>
+                            <div class="feature"><i class="fa fa-desktop fa-4x" aria-hidden="true"></i> 
+                                <h5>简单易用的控制台</h5>
                             </div>
                         </div>
                         <!-- /.feature -->
                         <div class="col-sm-3 col-xs-6">
-                            <div class="feature"><i class="fa fa-handshake-o fa-4x" aria-hidden="true"></i>
-                                <h5>Hourly billing</h5>
+                            <div class="feature"><i class="fa fa-cart-arrow-down fa-4x" aria-hidden="true"></i>
+                                <h5>为您精心定制的套餐选项</h5>
                             </div>
                         </div>
                         <!-- /.feature -->
