--- a/templates/userWeb/control/cbase.html
+++ b/templates/userWeb/control/cbase.html
@@ -17,7 +17,7 @@
     {% block content %}{% endblock %}
     <footer>
         <div class="container-fluid foot">
-            <h5>Copyright 2016 &copy Logo LLC. All rights reserved.</h5>
+            <h5>Copyright 2016 &copy 云雀加速器 LLC. All rights reserved.</h5>
         </div>
     </footer>
     <!-- Bootstrap core JavaScript
